# Matrix-Peru

./: .gitignore
release/: README.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: forest_mask.tif  model_mortality.json  model_recruitment.json  model_upgrowth.json  peru_departments.geojson
src-tauri/src/: main.rs  random_forest.rs  simulation.rs
src-tauri/tools/: make_icon.py
