[package]
name = "matrixpro-peru"
version = "1.0.2"
description = "Matrix Model Based Forest Growth Simulator (Peru)"
authors = ["Liang Lab, Purdue University"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tiff = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
